tree-sitter-eriun/test/corpus/opApp.txt
=======
 opApp
=======

<A: #U 0> (s: <B: #U 0> (B) B) (a: A) A :> s 'A a

---

(expr
  (erasedLambda
    (sym)
    (universe
      (levels
        (nat)))
    (lambda
      (sym)
      (erasedLambda
        (sym)
        (universe
          (levels
            (nat)))
        (lambda
          (sym)
          (sym)))
      (lambda
        (sym)
        (sym)
        (opTyped
          (sym)
          (opApp
            (opApp
              (sym)
              (erased)
              (sym))
            (sym)))))))
