tree-sitter-eriun/test/corpus/postIntersection.txt
==================
 postIntersection
==================

(A: #U 0) (B: (A) #U 0) (i: (a: A /\ B a)) B i.1 :> i.2

---
(expr
  (lambda
    (sym)
    (universe
      (levels
        (nat)))
    (lambda
      (sym)
      (lambda
        (sym)
        (universe
          (levels
            (nat))))
      (lambda
        (sym)
        (intersectionT
          (sym)
          (sym)
          (opApp
            (sym)
            (sym)))
        (opTyped
          (opApp
            (sym)
            (postIntersection
              (sym)))
          (postIntersection
            (sym)))))))
